initial project scaffolding

--- a/src/pages/create.astro
+++ b/src/pages/create.astro
@@ -8,8 +8,9 @@ import Layout from "../layouts/Layout.astro";
 // }
 ---
 
-<Layout title="favicon.land">
-	<h1>todo: create entire site</h1>
+<Layout title="favicon.land | new icon">
+    <!-- <h1>todo: create entire site</h1> -->
+    <h1>new icon</h1>
 </Layout>
 
 <style></style>
