--- a/src/pages/badpage.astro
+++ b/src/pages/badpage.astro
@@ -2,14 +2,14 @@
 // src/pages/index.astro
 import Layout from "../layouts/Layout.astro";
 
-// const user = Astro.locals.user;
-// if (user) {
-//   return Astro.redirect("/feed");
-// }
+const user = Astro.locals.user;
+if (user) {
+    return Astro.redirect("/feed");
+}
 ---
 
 <Layout title="favicon.land">
-	<h1>todo: create entire site</h1>
+    <h1>loading user {user.e}</h1>
 </Layout>
 
 <style></style>
