--- a/src/pages/logup.astro
+++ b/src/pages/logup.astro
@@ -119,7 +119,7 @@ if (user) {
                 }
 
                 try {
-                    const response = await fetch("/api/v1/register", {
+                    const response = await fetch("/api/v1/logup", {
                         method: "POST",
                         headers: {
                             "Content-Type": "application/json",
