updating nav pages and trying to implement search function

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,6 +10,13 @@ import Layout from "../layouts/Layout.astro";
 
 <Layout title="favicon.land">
 	<h1>todo: create entire site</h1>
+	<h2>recent icons</h2>
+	<h2>popular icons</h2>
+	<h2>occult theme</h2>
+	<h2>animated</h2>
+	<h2>angry</h2>
+	<h2>happy</h2>
+	<h2>meme</h2>
 </Layout>
 
 <style></style>
