--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -6,14 +6,15 @@ const user = Astro.locals.user;
     <a href="/">Home</a>
     <!-- search -->
     <a href="/create">new icon</a>
-    <input type="text" placeholder="Search" />
+    <form action="/search" method="get">
+        <input type="text" placeholder="Search" />
+        <button type="submit">Search</button>
+    </form>
     {
         user ? (
             <>
                 <a href="/my-icons">My Icons</a>
-                <form action="/api/v1/logout" method="post">
-                    <button type="submit">Log out</button>
-                </form>
+                <a href="/api/v1/logout">Log out</a>
             </>
         ) : (
             <>
@@ -23,5 +24,24 @@ const user = Astro.locals.user;
         )
     }
 </nav>
+
+<script>
+    // there are multiple forms, we just need to find the one that is the search form
+    const forms = document.querySelectorAll("form");
+    forms.forEach((form) => {
+        if (form.action === "/search") {
+            form.addEventListener("submit", (e) => {
+                e.preventDefault();
+                const formData = new FormData(e.target);
+                const data = Object.fromEntries(formData.entries());
+                console.log(data);
+                // add search params to url
+                const url = new URL(window.location.href);
+                url.searchParams.set("search", data.search);
+                window.location.href = url.href;
+            });
+        }
+    });
+</script>
 
 <style></style>
