--- a/src/pages/badpage.astro
+++ b/src/pages/badpage.astro
@@ -3,13 +3,13 @@
 import Layout from "../layouts/Layout.astro";
 
 const user = Astro.locals.user;
-if (user) {
-    return Astro.redirect("/feed");
-}
+// if (user) {
+//     return Astro.redirect("/feed");
+// }
 ---
 
 <Layout title="favicon.land">
-    <h1>loading user {user.e}</h1>
+    <h1>loading user {user.e.e}</h1>
 </Layout>
 
 <style></style>
